# pico-light-switch

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  actuator.c  actuator.h  actuator_level_1.service  actuator_level_2.service  config.h  ftime.c  ftime.h  generate_schedules.py  lcd.c  lcd.h  license_texts.h  loop_measurer.c  loop_measurer.h  lwipopts.h  main.c  main_core1.c  ntp.c  ntp.h  run_on_regular_pi.py  schedule_level_1.h  schedule_level_2.h  schedules.h  time_64bit.c  time_64bit.h  time_64bit_musl.c  unix_time.c  unix_time.h  upload_to_pico.sh  ws2812.pio
boards/: waveshare_rp2350_relay_6ch_w.h
